--- a/hugo.yaml
+++ b/hugo.yaml
@@ -70,7 +70,7 @@ params:
   # GitHub repo of your site
   gitRepo: https://github.com/krzpob/krzpob.github.io.git
   # Default branch of your Git repo
-  gitBranch: main
+  gitBranch: master
 
   # Configure the number of section title visible in the top navbar
   topNavbar:
