--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -1,10 +1,10 @@
-name: Merge to main workflows
+name: Merge to master workflows
 
 # run when a commit is pushed to "source" branch
 on:
   push:
     branches:
-    - main
+    - master
 
 jobs:
   deploy-to-gh-pages:
