--- a/data/pl/sections/about.yaml
+++ b/data/pl/sections/about.yaml
@@ -1,12 +1,12 @@
 section:
-  name: About # Title of section (default: "")
+  name: O mnie # Title of section (default: "")
   id: about # url id/slug of section *Required*
   enable: true # Boolean to determine if this section is enabled (default: false)
   weight: 1 # Order to display section in (default: alphabetical followed by weight)
   showOnNavbar: true # Boolean to determine if a link should be shown for this section on the navbar
   template: sections/about.html
-designation: Senior Java Software Engineer and owner of Java Soft Krzysztof Pobożan
-summary: 'I am a passionate software engineer with 15 years of working experience.'
+designation: Senior Java Software Engineer
+summary: 'Jestem programistą z 15 letnim doświadczeniem.'
 socialLinks:
   - name: Email
     icon: "fas fa-envelope"
