--- a/.github/workflows/theme-update.yml
+++ b/.github/workflows/theme-update.yml
@@ -47,6 +47,6 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
-          base: main
+          base: master
           title: Update theme
           labels: automerge
