--- a/data/pl/sections/about.yaml
+++ b/data/pl/sections/about.yaml
@@ -16,7 +16,7 @@ socialLinks:
     url: "https://facebook.com/javasoft.poland"
 resourceLinks:
   - title: "My Resume"
-    url: "files/CVKrzysztofPobozan.pdf"
+    url: "files/Krzysztof Pobozan - Senior Software Engeener Resume.pdf"
 badges:
 - type: certification
   name: Oracle Certified Associate, Java SE 7 Programmer
